# rusty-shades

./: .gitignore  .rustfmt.toml  Cargo.toml  ast-simple-vertex.rsh.debug  grammar.txt  tokens-simple-vertex.rsh.debug
.cargo/: config
.github/workflows/: ci.yml  release.yml
examples/: not-simple-vertex.rsh  simple-vertex.rsh
rsh-ast/: Cargo.toml
rsh-ast/src/: lib.rs
rsh-common/: Cargo.toml
rsh-common/src/: ast.rs  error.rs  lib.rs  naga.rs  src.rs
rsh-irs/: Cargo.toml
rsh-irs/src/: lib.rs  node.rs  ty.rs
rsh-irs/src/hir/: mod.rs
rsh-irs/src/infer/: constraints.rs  mod.rs
rsh-irs/src/infer/constraints/: access.rs  binary.rs  call.rs  constructor.rs  index.rs  unary.rs
rsh-irs/src/ir/: const_solver.rs  mod.rs  monomorphize.rs
rsh-irs/src/thir/: mod.rs  pretty.rs
rsh-lexer/: Cargo.toml
rsh-lexer/src/: lib.rs
rsh-naga/: Cargo.toml
rsh-naga/src/: lib.rs
rsh-parser/: Cargo.toml  build.rs
rsh-parser/src/: grammar.lalrpop  grammar.rs  lib.rs
rshc/: Cargo.toml
rshc/src/: main.rs
rshc/tests/: golden_tests.rs
src/: ast.rs  error.rs  grammar.lalrpop  lex.rs  lexer.rs  lib.rs  main.rs  node.rs  src.rs  ty.rs  utils.rs
src/backends/: mod.rs
src/backends/naga/: mod.rs
src/hir/: constant_solver.rs  infer.rs  mod.rs  pretty.rs  visitor.rs
src/hir/infer/: constraints.rs
src/hir/infer/constraints/: access.rs  binary.rs  call.rs  constructor.rs  index.rs  unary.rs
src/infer/: constraints.rs  mod.rs
src/infer/constraints/: access.rs  call.rs  constructor.rs  unary.rs
src/ir/: const_solver.rs  expressions.rs  infer.rs  mod.rs  monomorphize.rs
src/thir/: mod.rs
tests/: constants.rsh  empty-if.rsh  extern-functions.rsh  function-ty.rsh  generic-infer.rsh  locals-ty.rsh  not-simple-vertex.rsh  recursive-functions.rsh  simple-program.rsh  simple-vertex.rsh  structs.rsh  test.rs  tuple.rsh  vertex.rsh
tests/snapshots/: test__insta_test@constants.rsh.snap  test__insta_test@empty-if.rsh.snap  test__insta_test@extern-functions.rsh.snap  test__insta_test@function-ty.rsh.snap  test__insta_test@generic-infer.rsh.snap  test__insta_test@recursive-functions.rsh.snap  test__insta_test@simple-program.rsh.snap  test__insta_test@structs.rsh.snap  test__insta_test@tuple.rsh.snap  test__insta_test@vertex.rsh.snap
