[package]
name = "rusty-shades"
version = "0.1.0"
authors = ["Capucho <jcapucho7@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
rsh-irs = { path = "./rsh-irs" }
rsh-lexer = { path = "./rsh-lexer" }
rsh-parser = { path = "./rsh-parser" }
rsh-naga = { path = "./rsh-naga", optional = true }
rsh-common = { path = "./rsh-common" }

[features]
default = ["spirv"]
spirv = ["rsh-naga", "rsh-naga/spirv"]
codespan = ["rsh-common/codespan-reporting"]

[workspace]
default-members = ["rshc"]
members = [
    "rsh-lexer",
    "rsh-naga",
    "rsh-common",
    "rshc",
    "rsh-ast",
    "rsh-parser",
    "rsh-irs"
]
