[package]
name = "rusty-shades"
version = "0.1.0"
authors = ["Capucho <jcapucho7@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
rsh-irs = { path = "./rsh-irs" }
rsh-parser = { path = "./rsh-parser" }
rsh-naga = { path = "./rsh-naga", optional = true }
rsh-common = { path = "./rsh-common" }

[dev-dependencies]
insta = { version = "1.3", features = ["ron", "glob"] }

[features]
default = ["spirv", "serde"]
spirv = ["rsh-naga", "rsh-naga/spirv"]
codespan = ["rsh-common/codespan-reporting"]
serde = ["rsh-common/serde", "rsh-naga/serialize"]

[workspace]
default-members = ["rshc"]
members = [
    "rsh-naga",
    "rsh-common",
    "rshc",
    "rsh-parser",
    "rsh-irs"
]
