[package]
name = "rsh-common"
version = "0.1.0"
authors = ["Capucho <jcapucho7@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
fxhash = "0.2"
codespan-reporting = { version = "0.11", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }

# naga is under heavy development and many things aren't in the crates.io release
[dependencies.naga]
git = "https://github.com/gfx-rs/naga.git"
rev = "181d8721cc9577fcd6e509eb5c1c6c3e16f95398"
optional = true

# we use a git depedency to prevent hashbrown version duplication
[dependencies.lasso]
git = "https://github.com/Kixiron/lasso.git"
rev = "ccafec656171f78e4f46fbc266dc90a91b1fb949"
