[package]
name = "rsh-lexer"
version = "0.1.0"
authors = ["Capucho <jcapucho7@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
logos = { git = "https://github.com/maciejhirsz/logos", rev = "cc26afc3a3ce28ea88c63699c06c0e27fc90fc92" }
rsh-common = { path = "../rsh-common" }
