[package]
name = "rsh-naga"
version = "0.1.0"
authors = ["Capucho <jcapucho7@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
rsh-common = { path = "../rsh-common", features = ["naga"] }
rsh-irs = { path = "../rsh-irs" }
naga = "0.2"

[features]
spirv = ["naga/spv-out"]
glsl = ["naga/glsl-out"]
msl = ["naga/msl-out"]
serialize = ["naga/serialize"]
