[package]
name = "rsh-parser"
version = "0.1.0"
authors = ["Capucho <jcapucho7@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
lalrpop-util = "0.19"
rsh-common = { path = "../rsh-common" }
rsh-lexer = { path = "../rsh-lexer" }
rsh-ast = { path = "../rsh-ast" }

[features]
build = ["lalrpop"]

[build-dependencies]
lalrpop = { version = "0.19", optional = true }
