[package]
name = "rshc"
version = "0.1.0"
authors = ["Capucho <jcapucho7@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
naga = { git = "https://github.com/gfx-rs/naga.git", rev = "b76dff9d9ccb99b5e4f377f99d8b46017a181d26" }
codespan-reporting = { version = "0.9" }
rusty-shades = { path = "..", features = ["naga", "codespan"] }
clap = "2.33"
ron = { version = "0.6", optional = true }
serde = { version = "1.0", optional = true }

[dev-dependencies]
goldentests = "0.3"

[features]
default = ["spirv", "glsl", "msl", "ir"]
spirv = ["naga/spv-out"]
glsl = ["naga/glsl-out"]
msl = ["naga/msl-out"]
ir = ["naga/serialize", "ron", "serde"]
