[package]
name = "rshc"
version = "0.1.0"
authors = ["Capucho <jcapucho7@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
rsh-naga = { path = "../rsh-naga" }
codespan-reporting = { version = "0.9" }
rusty-shades = { path = "..", features = ["codespan"] }
clap = "2.33"
ron = { version = "0.6", optional = true }
serde = { version = "1.0", optional = true }
tracing-subscriber = "0.2"

[dev-dependencies]
goldentests = "0.3"

[features]
default = ["spirv", "glsl", "msl", "ir"]
spirv = ["rsh-naga/spirv"]
glsl = ["rsh-naga/glsl"]
msl = ["rsh-naga/msl"]
ir = ["rsh-naga/serialize", "ron", "serde"]
